# nossas-despesas

./: .gitignore  .golangci.yml  .mockery.yml  .tool-versions  Dockerfile  Makefile  README.md  application.go  coverage.html  coverage.out  coverage_report.md  docker-compose.yml  firebaseServiceAccount.json  go.mod  go.sum  main.go  makefile  router.go
.cursor/command/: pr.md
.cursor/commands/: pr.md
.githooks/: pre-commit
.github/: coverage-report.sh
.github/worflows/: cicd.yml
.github/workflows/: backend-deploy.yml  backend-pr.yml  main.yml  ml-deploy.yml  ml-pr.yml  pull-request.yml  push-branch-main.yml  web-deploy.yml  web-pr.yml
backend/: .gitignore  .golangci.yml  .mockery.yml  Dockerfile  Makefile  README.md  config.go  go.mod  go.sum  main.go
backend/cmd/: main.go
backend/database/: atlas.hcl  migrate.sh
backend/templates/: group_invite.html
database/: atlas.hcl  migrate.sh  schema.hcl
database/migrations/: 20231010002540_init.down.sql  20231010002540_init.up.sql  20231021015010_init.down.sql  20231021015010_init.up.sql  (+13 more)
machine_learn/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
machine_learn/src/: __init__.py
machine_learn/src/api/: __init__.py  app.py  models.py  predict.py
machine_learn/src/models/: svm_rbf.pkl
machine_learn/tests/: __init__.py  conftest.py  test_app.py  test_predict.py
machine_learn/training/: __init__.py  train_model.py
scripts/: main.go
web/: .eslintrc.json  .gitignore  MIGRATION_NEXTAUTH_V5.md  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
(+895 files in other folders)
