[tool.poetry]
name = "nossas-despesas-ml"
version = "0.1.0"
description = "Pipeline de machine learning para classificação de categorias de despesas"
authors = ["Seu Nome <seu.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
scikit-learn = ">=1.3.0"
joblib = ">=1.3.0"
fastapi = { extras = ["standard"], version = ">=0.104.0" }
uvicorn = { extras = ["standard"], version = ">=0.24.0" }
xgboost = { version = ">=2.0.0", optional = true }
lightgbm = { version = ">=4.0.0", optional = true }

[tool.poetry.extras]
full = ["xgboost", "lightgbm"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
